--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
 
 .ui.masthead{
   width: 100%;
-  background-color: #1b1c1d;
+  background-color: #222222;
   border: 0 solid black;
 }
 
@@ -39,4 +39,26 @@
   vertical-align: bottom;;
   margin: -.3em 0;
   /*padding: 0em 1.14285714em;*/
+}
+
+.ui.menu.item.chords {
+  border: none;
+  box-shadow: none;
+}
+
+.ui.grid>.column:not(.row) {
+    padding-top: 0rem;
+    padding-bottom: 0rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+.chord{
+  color: #990000;
+}
+
+.letter{
+}
+
+.ui.divider {
+    margin: 0rem 0;
 }
