--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@
 }
 
 .four.wide.column.mobile-container.active{
-  background-color: #CA9696;
+  background-color: rgba(255, 141, 133, 0.86);
 }
 
 .four.wide.column.mobile-container.active .icon.element-mobile{
@@ -208,7 +208,6 @@ h3.ui.header {
   color: #222;
   padding: 0rem;
   box-shadow: none;
-  border: 1px solid #d4d4d5;
   border-radius: .5rem;
   width: 45%;
   margin: auto;
@@ -222,7 +221,6 @@ h3.ui.header {
   color: #70282A;
   padding: 0rem;
   box-shadow: none;
-  border: 1px solid #d4d4d5;
   border-radius: .5rem;
   width: 45%;
   margin: auto;
@@ -243,4 +241,23 @@ h3.ui.header {
 
 .left.item{
   height: 90px;
+}
+
+.ui.menu.effect-revolution {
+    background: #fff;
+    box-shadow: 0 1px 2px 0 rgb(170, 170, 170);
+    border: 1px solid rgb(170, 170, 170);
+    background-color: #222222;
+}
+
+.ui.menu .item.effect-revolution{
+    color: white;
+}
+
+.ui.menu .item.effect-revolution:hover{
+    color: rgba(255, 141, 133, 0.86);
+}
+
+.ui.menu .item.effect-revolution:before {
+    background: rgb(170, 170, 170);
 }
