--- a/css/events.css
+++ b/css/events.css
@@ -23,14 +23,7 @@
   width: 25%;
 }
 
-#Letras .ui.song-container{
-  margin: 2.5em;
-}
 
-#Acordes .ui.song-container{
-  margin: 1.25em;
-  padding: 0em;
-}
 
 
 .ui.menu.item.chords {
@@ -165,4 +158,32 @@ h3.ui.header {
 
 .ui.grid+.grid {
     margin-top: 0rem;
+}
+
+.ui.rev-color.ribbon.label{
+  background-color: #ED3338;
+  color: white;
+  border-color: #E17E77;
+}
+
+.ui.items>.item.rev-publish {
+  position: relative;
+  background: #fff;
+  box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);
+  margin: 1rem 0;
+  padding: 1em;
+  border-radius: .28571429rem;
+  border: 1px solid rgba(34,36,38,.15);
+}
+
+.ui.items>.item>.image.rev-img {
+  max-height: 750px!important;
+}
+
+.ui.items>.item>.image>img.rev-img {
+  max-height: 750px!important;
+}
+
+.ui.facebook.button {
+  margin-left: 10px;
 }
