--- a/css/home.css
+++ b/css/home.css
@@ -63,8 +63,10 @@ video {
 }
 
 @media screen and (max-device-width: 800px) {
-  html {
+  body {
     background: url('../images/home.jpg') #000 no-repeat center center fixed;
+    background-size: cover;
+    transition: 1s opacity;
   }
   #bgvid {
     display: none;
