--- a/css/search.css
+++ b/css/search.css
@@ -201,7 +201,7 @@ h3.ui.header {
 }
 
 .ui.divider:not(.vertical):not(.horizontal) {
-    border-top: 1px solid #e17e77!important;
+    border-top: 1px solid #cecccc!important;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     margin: 0em 3em !important;
 }
@@ -217,3 +217,5 @@ h3.ui.header {
     color: #e17e77!important;
     border-color: #e17e77!important;
 }
+
+
