--- a/css/search.css
+++ b/css/search.css
@@ -222,7 +222,16 @@ h3.ui.header {
   font-size:1.5rem !important;  
 }
 
+.beru-container{
+  font-size:1.14285714rem !important;
+  padding-bottom: 15px;
+  padding-top: 15px;
+}
+
 @media (max-width: 780px){
+  .beru-container{
+    font-size:1rem !important;
+  }
   .beru-title{
     font-size:1.14285714rem !important;  
   }
