--- a/css/search.css
+++ b/css/search.css
@@ -229,6 +229,10 @@ h3.ui.header {
   padding-top: 15px;
 }
 
+a.ui.right.floated.header.beru-title:hover{
+  cursor:pointer;
+}
+
 @media (max-width: 780px){
   .beru-container{
     font-size:1rem !important;
