--- a/css/search.css
+++ b/css/search.css
@@ -251,4 +251,7 @@ a.ui.right.floated.header.beru-title:hover{
   .beru-only-desktop{
     font-size:0rem;
   }
+  .beru-only-mobile-desktop{
+    margin-left: -15px;
+  }
 }
