--- a/css/search.css
+++ b/css/search.css
@@ -257,4 +257,9 @@ a.ui.right.floated.header.beru-title:hover{
   .ui.header .icon.beru-icon:only-child {
     height: 0%!important;
   }
+  .ui.labeled.icon.button, .ui.labeled.icon.buttons .button.beru-button {
+    position: relative;
+    padding-left: 4.07142857em!important;
+    padding-right: 0em!important;
+  }
 }
