--- a/css/search.css
+++ b/css/search.css
@@ -241,6 +241,10 @@ a.ui.right.floated.header.beru-title:hover{
   cursor:pointer;
 }
 
+img .beru.image{
+  margin-top: -25px;
+}
+
 @media (max-width: 780px){
   .beru-container{
     font-size:1rem !important;
