--- a/css/search.css
+++ b/css/search.css
@@ -242,7 +242,7 @@ a.ui.right.floated.header.beru-title:hover{
 }
 
 img .beru.image{
-  margin-top: -25px;
+  margin-top: -25px!important;
 }
 
 @media (max-width: 780px){
