--- a/css/search.css
+++ b/css/search.css
@@ -245,6 +245,15 @@ a.ui.right.floated.header.beru-title:hover{
   margin-top: -25px!important;
 }
 
+a.beru-artist{
+  color: #e17e77;
+}
+
+a.beru-artist:hover{
+  color: #ed3338;
+  cursor:pointer;
+}
+
 @media (max-width: 780px){
   .beru-container{
     font-size:1rem !important;
