--- a/css/search.css
+++ b/css/search.css
@@ -242,11 +242,17 @@ a.ui.right.floated.header.beru-title:hover{
 }
 
 .ui.circular.image.beru-image{
-  margin-top: -25px!important;
+  top: 17px;
+  position: absolute;
 }
 
 a.beru-artist{
   color: #e17e77;
+  margin-left: 70px!important;
+}
+
+a.beru-song{
+  margin-left: 70px!important;
 }
 
 .beru-bg-color{
@@ -314,5 +320,12 @@ a.beru-artist:hover{
     position: relative;
     padding-left: 4.07142857em!important;
     padding-right: 0em!important;
+  }
+  a.beru-artist{
+    margin-left: 50px!important;
+  }
+
+  a.beru-song{
+    margin-left: 50px!important;
   }
 }
