--- a/css/search.css
+++ b/css/search.css
@@ -251,7 +251,7 @@ a.beru-artist{
   margin-left: 70px!important;
 }
 
-a.beru-song{
+span.beru-song{
   margin-left: 70px!important;
 }
 
@@ -325,7 +325,7 @@ a.beru-artist:hover{
     margin-left: 50px!important;
   }
 
-  a.beru-song{
+  span.beru-song{
     margin-left: 50px!important;
   }
 }
