--- a/css/search.css
+++ b/css/search.css
@@ -251,6 +251,15 @@ a.ui.right.floated.header.beru-title:hover{
   margin-left: 70px!important;
 }
 
+.beru-artist > a,span{
+  color: #e17e77;
+}
+
+.beru-artist > a:hover{
+  color: #ed3338;
+  cursor:pointer;
+}
+
 .beru-song{
   margin-left: 70px!important;
 }
@@ -265,11 +274,6 @@ a.ui.right.floated.header.beru-title:hover{
   background:#ed3338!important;
   background-color:#ed3338!important;
   color:white!important;
-}
-
-.beru-artist:hover{
-  color: #ed3338;
-  cursor:pointer;
 }
 
 .beru-item{
